--- a/PFT/PFT.csproj
+++ b/PFT/PFT.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.16" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.16" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="TwelveDataSharp" Version="1.1.0" />
   </ItemGroup>
 
 </Project>
