Implemented refresh investments flow. File reading unit test. New view

--- a/PFT/PFT.csproj
+++ b/PFT/PFT.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="TwelveDataSharp" Version="1.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\fonts\" />
+  </ItemGroup>
+
 </Project>
